# rude-frontend-rs

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  index.html  input.css  package.json  tailwind.config.js  vercel-build.sh  vercel.json
.cargo/: config.toml
src/: main.rs  route.rs
src/components/: app_layout.rs  layout.rs  mod.rs  navbar.rs  submit_transaction.rs  wallet.rs  wallet_adapter.rs
src/gateway/: error.rs  mod.rs  solana.rs
src/hooks/: mod.rs  use_gateway.rs  use_wallet.rs
src/pages/: about.rs  home.rs  mod.rs  not_found.rs
wallet-adapter/: package.json  webpack.config.js
wallet-adapter/src/: main.js  styles.css
