[package]
name = "solana-web-app"
version = "0.1.0"
edition = "2021"
description = "A Solana-focused web app built with Rust and Dioxus"

[features]
default = ["web"]
web = [
  "dioxus/web",
  "gloo",
  "gloo-storage",
  "gloo-net",
  "gloo-timers",
  "js-sys",
  "serde-wasm-bindgen",
  "solana-client-wasm",
  "solana-extra-wasm",
  "wasm-bindgen",
  "wasm-bindgen-futures",
  "wasm-logger",
  "web-sys",
  "web-time",
]

[dependencies]
anyhow = "1.0"
base64 = "0.22.1"
bincode = "1.3.3"
bs58 = "0.4"
dioxus = { version = "0.6.1", features = ["router"] }
dioxus-logger = "0.6"
gloo = { version = "0.11.0", optional = true }
gloo-storage = { version = "0.3.0", optional = true }
gloo-net = { version = "0.6.0", optional = true }
gloo-timers = { version = "0.3.0", optional = true }
js-sys = { version = "0.3.67", optional = true }
log = "0.4.20"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = { version = "0.6.3", optional = true }
serde_json = "1.0"
solana-client-wasm = { version = "2.1", optional = true }
solana-extra-wasm = { version = "2.1", optional = true }
solana-sdk = "2.1"
wasm-bindgen = { version = "0.2.99", optional = true }
wasm-bindgen-futures = { version = "0.4.41", optional = true }
wasm-logger = { version = "0.2.0", optional = true }
web-time = { version = "1.0.0", optional = true }

[dependencies.web-sys]
version = "0.3"
optional = true
features = [
  'BlobPropertyBag',
  'console',
  'Document',
  'HtmlElement',
  'HtmlInputElement',
  'MessageEvent',
  'Navigator',
  'Window',
]

[patch.crates-io]
solana-client-wasm = { version = "2.1", git = "https://github.com/regolith-labs/solana-playground", branch = "master" }
solana-extra-wasm = { version = "2.1", git = "https://github.com/regolith-labs/solana-playground", branch = "master" }

[profile.wasm-dev]
inherits = "dev"
opt-level = 1
