[package]
name = "solana-web-app"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
default = ["web"]
web = [
  "dioxus/web",
  "gloo",
  "gloo-storage",
  "js-sys",
  "serde-wasm-bindgen",
  "solana-client-wasm",
  "solana-extra-wasm",
  "wasm-bindgen",
  "wasm-bindgen-futures",
  "wasm-logger",
  "web-sys",
]

[dependencies]
dioxus = { version = "0.6.1", features = ["router"] }
dioxus-logger = "0.6"
tracing = "0.1.40"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.30"
base64 = "0.22.1"
bs58 = "0.4"

# Web-specific dependencies
gloo = { version = "0.11.0", optional = true }
gloo-storage = { version = "0.3.0", optional = true }
js-sys = { version = "0.3.67", optional = true }
serde-wasm-bindgen = { version = "0.6.3", optional = true }
wasm-bindgen = { version = "0.2.99", optional = true }
wasm-bindgen-futures = { version = "0.4.41", optional = true }
wasm-logger = { version = "0.2.0", optional = true }

# Solana dependencies
solana-sdk = "2.1"
solana-client-wasm = { version = "2.1", optional = true }
solana-extra-wasm = { version = "2.1", optional = true }

# WASM-specific dependencies
getrandom = { version = "0.2", features = ["js"] }

[dependencies.web-sys]
version = "0.3"
optional = true
features = [
  'console',
  'Document',
  'HtmlElement',
  'Window',
]

[patch.crates-io]
solana-client-wasm = { version = "2.1", git = "https://github.com/regolith-labs/solana-playground", branch = "master" }
solana-extra-wasm = { version = "2.1", git = "https://github.com/regolith-labs/solana-playground", branch = "master" }

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
